# scancode-toolkit

./: AUTHORS.rst  Dockerfile  setup-mini.cfg  setup.cfg
src/packagedcode/: __init__.py  dockerfile.py  go_mod.py  luarocks.py  npm.py  pypi.py
tests/packagedcode/: test_dockerfile.py  test_luarocks.py  test_npm.py  test_pypi.py
tests/packagedcode/__pycache__/: test_parse_pyproject_toml.cpython-312-pytest-8.3.3.pyc.26520
tests/packagedcode/data/docker/: containerfile-expected.json  psql-expected.json  psql.dockerfile  test-dockerfile-expected.json  test.containerfile  test.dockerfile
tests/packagedcode/data/npm/package-lock-v1/: package-lock.json
tests/packagedcode/data/npm/package-lock-v2/: package-lock.json
tests/packagedcode/data/pypi/pyproject-toml/standard/: private-classifier-pyproject.toml-expected.json
tests/packagedcode/data/pypi/pyproject-toml/standard/python-private-classifier/: pyproject.toml
